--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@material-ui/styles": "^4.11.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
     "react-redux": "^7.2.0",
+    "react-scripts": "4.0.1",
+    "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
